hardcover api, media savings implemented
